<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<LinearLayout
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:layout_weight="0.01"
	   android:paddingTop="10dp"
	   android:orientation="horizontal">
	   
	   <ImageView
	       android:id="@+id/final_score_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:layout_marginRight="10dp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textSize="25sp" />           
           
    </LinearLayout>
    
    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:padding="14dp"
        android:layout_weight="0.8">
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textSize="20sp" />
            
    </ScrollView>
    
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
            
        <TableRow>
        
            <Button
                android:id="@+id/start_button_1_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_button_1player_text" />   
                
            <Button
                android:id="@+id/start_button_2_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_button_2player_text" />                
            
        </TableRow>
    </TableLayout>
        
        
	   	   
		
</LinearLayout>
